# vtt-subtitle-cleaner

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  test_example.vtt
subtitle_cleanup/: __main__.py  parser.py
tests/: test_parser.py
